@@ -7,6 +7,7 @@ import de.timuuuu.moneymaker.activities.widgets.ChatMessageWidget;
 import de.timuuuu.moneymaker.activities.widgets.OnlineEntryWidget;
 import de.timuuuu.moneymaker.badges.MoneyRank;
 import de.timuuuu.moneymaker.chat.ChatClient.ChatAction;
+import de.timuuuu.moneymaker.chat.ChatClientUtil.MessageType;
 import de.timuuuu.moneymaker.chat.MoneyChatMessage;
 import de.timuuuu.moneymaker.utils.AddonUtil;
 import de.timuuuu.moneymaker.utils.MoneyPlayer;
@@ -18,8 +19,10 @@ import java.util.Date;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicInteger;
 import net.labymod.api.Constants.Resources;
 import net.labymod.api.client.component.Component;
+import net.labymod.api.client.component.format.NamedTextColor;
 import net.labymod.api.client.gui.screen.Parent;
 import net.labymod.api.client.gui.screen.activity.AutoActivity;
 import net.labymod.api.client.gui.screen.activity.Link;
@@ -60,12 +63,18 @@ public class ChatActivity extends SimpleActivity {
   @Override
   public void initialize(Parent parent) {
     super.initialize(parent);
-    this.renderBackground = false;
 
     ComponentWidget titleWidget = ComponentWidget.i18n("moneymaker.ui.chat.title").addId("chat-title");
     this.document.addChild(titleWidget);
 
-    ComponentWidget statusWidget = ComponentWidget.i18n("moneymaker.ui.chat.server." + (this.addon.chatClient().online() ? "online" : "offline")).addId("chat-status");
+    ComponentWidget statusWidget;
+    if(this.addon.chatClient().online()) {
+      statusWidget = ComponentWidget.i18n("moneymaker.ui.chat.server.online", NamedTextColor.GREEN);
+    } else {
+      statusWidget = ComponentWidget.i18n("moneymaker.ui.chat.server.offline", NamedTextColor.RED);
+    }
+
+    statusWidget.addId("chat-status");
     this.document.addChild(statusWidget);
 
     ButtonWidget rulesButton = ButtonWidget.i18n("moneymaker.chat-rules.button").addId("rules-button");
@@ -92,12 +101,7 @@ public class ChatActivity extends SimpleActivity {
             reconnectButton.setEnabled(true);
             this.addon.chatClient().connect(true);
             if(this.addon.chatClient().online()) {
-              JsonObject data = new JsonObject();
-              data.addProperty("uuid", this.addon.labyAPI().getUniqueId().toString());
-              data.addProperty("userName", this.addon.labyAPI().getName());
-              data.addProperty("server", this.addon.chatClient().currentServer());
-              data.addProperty("addonVersion", this.addon.addonInfo().getVersion());
-              this.addon.chatClient().sendMessage("playerStatus", data);
+              this.addon.chatClient().util().sendPlayerStatus(this.addon.labyAPI().getUniqueId().toString(), this.addon.labyAPI().getName(), false);
 
               JsonObject object = new JsonObject();
               object.addProperty("uuid", this.addon.labyAPI().getUniqueId().toString());
@@ -111,7 +115,16 @@ public class ChatActivity extends SimpleActivity {
 
     // Online Container
 
-    ComponentWidget onlineTextWidget = ComponentWidget.i18n("moneymaker.ui.chat.online").addId("chat-online-text");
+    AtomicInteger onlineCount = new AtomicInteger(0);
+    AddonUtil.playerStatus.values().forEach(moneyPlayer -> {
+      String server = moneyPlayer.server();
+      if(server.startsWith("Mine") || server.startsWith("Farming")) {
+        onlineCount.getAndIncrement();
+      }
+    });
+
+
+    ComponentWidget onlineTextWidget = ComponentWidget.component(Component.translatable("moneymaker.ui.chat.online", NamedTextColor.AQUA, Component.text(onlineCount, NamedTextColor.YELLOW))).addId("chat-online-text");
     this.document.addChild(onlineTextWidget);
 
     DivWidget onlineContainer = new DivWidget();
@@ -121,31 +134,32 @@ public class ChatActivity extends SimpleActivity {
 
     if(this.addon.chatClient().online()) {
       List<MoneyPlayer> players = new ArrayList<>(AddonUtil.playerStatus.values());
-      players.sort(Comparator.comparing(o -> o.rank().getId()));
+      players.sort(Comparator.comparing(moneyPlayer -> {
+        if(moneyPlayer.rank() != null) {
+          return moneyPlayer.rank().getId();
+        }
+        return MoneyRank.USER.getId();
+      }));
 
+      if(Util.isDev(this.addon.labyAPI().getUniqueId().toString()) && this.addon.configuration().chatShowAllPlayers().get()) {
+        onlineList.addChild(new OnlineEntryWidget(this.addon, Component.text("→ ", NamedTextColor.DARK_GRAY).append(Component.text("Online auf MoneyMaker", NamedTextColor.GRAY))));
+      }
       players.forEach(moneyPlayer -> {
         String server = moneyPlayer.server();
-        // TODO: Remove server#contains("MoneyMaker") after new update
-        if(server.contains("MoneyMaker") || server.startsWith("Mine") || server.startsWith("Farming")) {
-          OnlineEntryWidget entryWidget = new OnlineEntryWidget(this.addon, moneyPlayer);
-          onlineList.addChild(entryWidget);
-          /*if(server.startsWith("Farming")) {
-            if(server.split(" - ").length == 2) {
-              String cave = server.split(" - ")[1];
-              server = "Farming - " + I18n.translate(this.addon.addonUtil().caveByName(cave).translation());
-            }
-          }
-          Component component = Component.icon(Icon.head(moneyPlayer.uuid()), 10)
-              .append(Component.text(" " + moneyPlayer.rank().getChatPrefix() + moneyPlayer.userName() + " §8- §b(" + server + ") "));
-          component.clickEvent(ClickEvent.openUrl("https://laby.net/@" + moneyPlayer.userName()));
-          if(Util.isDev(this.labyAPI.getUniqueId().toString())) {
-            component.hoverEvent(HoverEvent.showText(Component.text("§7Nutzt §e" + moneyPlayer.addonVersion() + " §7als Addon-Version")));
-          }
-          ComponentWidget componentWidget = ComponentWidget.component(component);
-          componentWidget.addId("online-entry");
-          onlineList.addChild(componentWidget);*/
+        if(server.startsWith("Mine") || server.startsWith("Farming")) {
+          onlineList.addChild(new OnlineEntryWidget(this.addon, moneyPlayer, false));
         }
       });
+
+      if(Util.isDev(this.addon.labyAPI().getUniqueId().toString()) && this.addon.configuration().chatShowAllPlayers().get()) {
+        onlineList.addChild(new OnlineEntryWidget(this.addon, Component.text("→ ", NamedTextColor.DARK_GRAY).append(Component.text("Online andere Server", NamedTextColor.GRAY))));
+        players.forEach(moneyPlayer -> {
+          if(moneyPlayer.server().equalsIgnoreCase("Other")) {
+            onlineList.addChild(new OnlineEntryWidget(this.addon, moneyPlayer, true));
+          }
+        });
+      }
+
     }
 
     ScrollWidget onlineScroll = new ScrollWidget(onlineList, new ListSession<>()).addId("online-scroll");
@@ -266,14 +280,14 @@ public class ChatActivity extends SimpleActivity {
 
         Result<UUID> requestUuid = this.labyAPI.labyNetController().loadUniqueIdByNameSync(playerName);
         if(requestUuid.hasException()) {
-          this.addCustomChatMessage("§4Failed to get uuid from " + playerName + ".");
-          this.addCustomChatMessage(requestUuid.exception().getMessage());
+          this.addCustomChatMessage(Component.text("Failed to get uuid from " + playerName + ":", NamedTextColor.DARK_RED));
+          this.addCustomChatMessage(Component.text(requestUuid.exception().getMessage(), NamedTextColor.RED));
           return;
         }
         UUID uuid = requestUuid.get();
 
         if(Util.isDev(uuid.toString()) || Util.isStaff(uuid)) {
-          this.addCustomChatMessage("§cDu kannst keine Teammitglieder muten.");
+          this.addCustomChatMessage(Component.text("Du kannst keine Teammitglieder muten.", NamedTextColor.RED));
           return;
         }
 
@@ -284,11 +298,18 @@ public class ChatActivity extends SimpleActivity {
 
         successful = this.addon.chatClient().sendChatAction(this.labyAPI.getUniqueId(), this.labyAPI.getName(), ChatAction.MUTE, object);
         if(successful) {
-          this.addCustomChatMessage("§7Du hast §e" + playerName + " §7erfolgreich gemutet.");
-          this.addCustomChatMessage("§7Grund: §e" + reason);
+          this.addCustomChatMessage(
+              Component.text("Du hast ", NamedTextColor.GRAY)
+                  .append(Component.text(playerName, NamedTextColor.YELLOW))
+                  .append(Component.text(" erfolgreich gemutet.", NamedTextColor.GRAY))
+          );
+          this.addCustomChatMessage(
+              Component.text("Grund: ", NamedTextColor.GRAY)
+                  .append(Component.text(reason, NamedTextColor.YELLOW))
+          );
         }
       } else {
-        this.addCustomChatMessage("§cBitte nutze /mute <Spieler> <Grund>");
+        this.addCustomChatMessage(Component.text("Bitte nutze /mute <Spieler> <Grund>", NamedTextColor.RED));
         return;
       }
     }
@@ -300,8 +321,8 @@ public class ChatActivity extends SimpleActivity {
 
         Result<UUID> requestUuid = this.labyAPI.labyNetController().loadUniqueIdByNameSync(playerName);
         if(requestUuid.hasException()) {
-          this.addCustomChatMessage("§4Failed to get uuid from " + playerName + ":");
-          this.addCustomChatMessage(requestUuid.exception().getMessage());
+          this.addCustomChatMessage(Component.text("Failed to get uuid from " + playerName + ":", NamedTextColor.DARK_RED));
+          this.addCustomChatMessage(Component.text(requestUuid.exception().getMessage(), NamedTextColor.RED));
           return;
         }
 
@@ -311,16 +332,23 @@ public class ChatActivity extends SimpleActivity {
 
         successful = this.addon.chatClient().sendChatAction(this.labyAPI.getUniqueId(), this.labyAPI.getName(), ChatAction.UNMUTE, object);
         if(successful) {
-          this.addCustomChatMessage("§7Du hast §e" + playerName + " §7erfolgreich entmutet.");
+          this.addCustomChatMessage(
+              Component.text("Du hast ", NamedTextColor.GRAY)
+                  .append(Component.text(playerName, NamedTextColor.YELLOW))
+                  .append(Component.text(" erfolgreich entmutet.", NamedTextColor.GRAY))
+          );
         }
       } else {
-        this.addCustomChatMessage("§cBitte nutze /unmute <Spieler>");
+        this.addCustomChatMessage(Component.text("Bitte nutze /unmute <Spieler>", NamedTextColor.RED));
         return;
       }
     }
 
     if(!successful) {
-      this.addCustomChatMessage("§cBefehl konnte nicht ausgeführt werden. §7(Nur für dich sichtbar)");
+      this.addCustomChatMessage(
+          Component.text("Befehl konnte nicht ausgeführt werden. ", NamedTextColor.RED)
+              .append(Component.text("(Nur für dich sichtbar)", NamedTextColor.GRAY))
+      );
     }
   }
 
@@ -332,7 +360,7 @@ public class ChatActivity extends SimpleActivity {
       if(chatMessages.size() <= MESSAGE_LIMIT) {
         chatMessages.add(new ChatMessageWidget(this.addon, chatMessage.fromServerCache() ? chatMessage.timeStamp() : CURRENT_TIME, chatMessage).addId("chat-message"));
       } else {
-        chatMessages.remove(0);
+        chatMessages.removeFirst();
         chatMessages.add(new ChatMessageWidget(this.addon, chatMessage.fromServerCache() ? chatMessage.timeStamp() : CURRENT_TIME, chatMessage).addId("chat-message"));
       }
 
@@ -345,13 +373,7 @@ public class ChatActivity extends SimpleActivity {
     if(message) {
       String CURRENT_TIME = new SimpleDateFormat("dd.MM HH:mm").format(new Date());
       this.addon.labyAPI().minecraft().executeOnRenderThread(() -> {
-
-        if(chatMessages.size() <= MESSAGE_LIMIT) {
-          chatMessages.add(new ChatMessageWidget(this.addon, CURRENT_TIME, "§4" + I18n.translate("moneymaker.ui.chat.chatCleared")).addId("chat-message"));
-        } else {
-          chatMessages.remove(0);
-          chatMessages.add(new ChatMessageWidget(this.addon, CURRENT_TIME, "§4" + I18n.translate("moneymaker.ui.chat.chatCleared")).addId("chat-message"));
-        }
+        chatMessages.add(new ChatMessageWidget(this.addon, CURRENT_TIME, Component.translatable("moneymaker.ui.chat.chatCleared", NamedTextColor.DARK_RED)).addId("chat-message"));
       });
     }
     this.reloadScreen();
@@ -362,7 +384,7 @@ public class ChatActivity extends SimpleActivity {
     for(ChatMessageWidget messageWidget : chatMessages) {
       if(messageWidget.chatMessage() != null) {
         if(messageWidget.chatMessage().messageId().equals(id)) {
-          if(messageWidget.systemMessage()) {
+          if(messageWidget.messageType() != MessageType.PLAYER) {
             remove.add(messageWidget);
           } else {
             messageWidget.chatMessage().message("§7§o" + I18n.translate("moneymaker.ui.chat.messageDeleted"));
@@ -377,7 +399,7 @@ public class ChatActivity extends SimpleActivity {
     this.reloadScreen();
   }
 
-  public void addCustomChatMessage(String chatMessage) {
+  public void addCustomChatMessage(Component chatMessage) {
     if (chatMessage == null) return;
     String CURRENT_TIME = new SimpleDateFormat("dd.MM HH:mm").format(new Date());
     this.addon.labyAPI().minecraft().executeOnRenderThread(() -> {
@@ -385,7 +407,7 @@ public class ChatActivity extends SimpleActivity {
       if(chatMessages.size() <= MESSAGE_LIMIT) {
         chatMessages.add(new ChatMessageWidget(this.addon, CURRENT_TIME, chatMessage));
       } else {
-        chatMessages.remove(0);
+        chatMessages.removeFirst();
         chatMessages.add(new ChatMessageWidget(this.addon, CURRENT_TIME, chatMessage));
       }
 
